src/test/ui/issues/issue-12041.stderr
error[E0382]: use of moved value: `tx`
  --> $DIR/issue-12041.rs:8:22
   |
LL |             let tx = tx;
   |                      ^^ value moved here, in previous iteration of loop
   |
   = note: move occurs because `tx` has type `std::sync::mpsc::Sender<i32>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
